[FIX] pos: payment screen on tablet
Before this commit, the payment screen on a normal 10.1" tablet
(lenovo YogaPad3) in full screen mode (GMD Full Screen Imersive Mode) was
forced to be scrolled by the operator already with only two different
payment methods.

Furthermore the min high of the payment amount was already too big for
this typical screen.

Now, only after adding the third payment method, scrolling is needed. The numpad
doesn't jump neither while the missing amount is shown.

--- a/addons/point_of_sale/static/src/css/pos.css
+++ b/addons/point_of_sale/static/src/css/pos.css
@@ -1281,7 +1281,7 @@ td {
     padding: 16px;
     padding-top: 0;
     border-bottom: dashed 1px gainsboro;
-    min-height: 154px;
+    min-height: 140px;
 }
 
 .pos .paymentlines {
@@ -1299,7 +1299,7 @@ td {
     border-radius: 3px;
 }
 .pos .paymentline{
-    font-size: 22px;
+    font-size: 20px;
 }
 .pos .paymentline.selected {
     font-size: 22px;
@@ -1315,7 +1315,7 @@ td {
     border-radius: 3px;
 }
 .pos .paymentline > *{
-    padding: 8px 12px;
+    padding: 5px 12px;
 }
 .pos .paymentline .col-due,
 .pos .paymentline .col-tendered,
@@ -1404,7 +1404,7 @@ td {
 }
 .payment-screen .paymentlines-empty .total {
     text-align: center;
-    padding: 24px 0px 18px;
+    padding: 18px 0px 18px;
     font-size: 64px;
     color: #43996E;
     text-shadow: 0px 2px white, 0px 2px 2px rgba(0, 0, 0, 0.27);
